[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio ={ version = "1.35.1", features = ["full"] }
serde ={ version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.95"
rand = "0.8.5"
tower-http = { version = "0.6.2", features = ["catch-panic"] }

